test_regress/t/t_tagged_union.out
%Error-UNSUPPORTED: t/t_tagged_union.v:16:18: Unsupported: tagged union
   16 |    typedef union tagged {
      |                  ^~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_tagged_union.v:17:7: Unsupported: void (for tagged unions)
   17 |       void Invalid;
      |       ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:23:18: Unsupported: tagged union
   23 |    typedef union tagged packed {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:24:7: Unsupported: void (for tagged unions)
   24 |       void          Invalid;
      |       ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:44:18: Unsupported: tagged union
   44 |    typedef union tagged {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:45:7: Unsupported: void (for tagged unions)
   45 |       void           Invalid;
      |       ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:52:18: Unsupported: tagged union
   52 |    typedef union tagged {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:56:13: Unsupported: tagged union
   56 |       union tagged {
      |             ^~~~~~
%Error: t/t_tagged_union.v:72:13: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   72 |       vi1 = tagged Invalid;
      |             ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_tagged_union.v:73:13: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   73 |       vi2 = tagged Invalid;
      |             ^~~~~~
%Error: t/t_tagged_union.v:76:13: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   76 |       vi1 = tagged Valid (42);
      |             ^~~~~~
%Error: t/t_tagged_union.v:79:13: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   79 |       vi2 = tagged Valid (23 + 34);
      |             ^~~~~~
%Error: t/t_tagged_union.v:83:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   83 |       mt = tagged Invalid;
      |            ^~~~~~
%Error: t/t_tagged_union.v:85:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   85 |       mt = tagged IntVal (32'h12345678);
      |            ^~~~~~
%Error: t/t_tagged_union.v:88:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   88 |       mt = tagged ShortVal (16'hABCD);
      |            ^~~~~~
%Error: t/t_tagged_union.v:91:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   91 |       mt = tagged ByteVal (8'h5A);
      |            ^~~~~~
%Error: t/t_tagged_union.v:94:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   94 |       mt = tagged BitVal (1'b1);
      |            ^~~~~~
%Error: t/t_tagged_union.v:98:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   98 |       mt = tagged Byte8NonZeroLSB (8'hA5);
      |            ^~~~~~
%Error: t/t_tagged_union.v:101:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  101 |       mt = tagged Word16NonZeroLSB (16'h1234);
      |            ^~~~~~
%Error: t/t_tagged_union.v:105:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  105 |       mt = tagged Word32LittleEndian (32'hDEADBEEF);
      |            ^~~~~~
%Error: t/t_tagged_union.v:108:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  108 |       mt = tagged Word16LittleEndian (16'hCAFE);
      |            ^~~~~~
%Error: t/t_tagged_union.v:112:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  112 |       mt = tagged Wide60 (60'hFEDCBA987654321);
      |            ^~~~~~
%Error: t/t_tagged_union.v:115:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  115 |       mt = tagged Wide60NonZeroLSB (60'h123456789ABCDEF);
      |            ^~~~~~
%Error: t/t_tagged_union.v:118:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  118 |       mt = tagged Wide60LittleEndian (60'hABCDEF012345678);
      |            ^~~~~~
%Error: t/t_tagged_union.v:122:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  122 |       mt = tagged Wide90 (90'hFF_FFFFFFFF_FFFFFFFF_FFFF);
      |            ^~~~~~
%Error: t/t_tagged_union.v:125:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  125 |       mt = tagged Wide90NonZeroLSB (90'hDE_ADBEEFCA_FEBABE12_3456);
      |            ^~~~~~
%Error: t/t_tagged_union.v:128:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  128 |       mt = tagged Wide90LittleEndian (90'h11_11111122_22222233_3333);
      |            ^~~~~~
%Error: t/t_tagged_union.v:132:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  132 |       at = tagged Invalid;
      |            ^~~~~~
%Error: t/t_tagged_union.v:134:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  134 |       at = tagged Scalar (999);
      |            ^~~~~~
%Error: t/t_tagged_union.v:137:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  137 |       at = tagged UnpackedArr '{100, 200, 300, 400};
      |            ^~~~~~
%Error: t/t_tagged_union.v:143:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  143 |       at = tagged UnpackedArr2D '{'{32'hA, 32'hB, 32'hC}, '{32'hD, 32'hE, 32'hF}};
      |            ^~~~~~
%Error: t/t_tagged_union.v:152:15: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  152 |       instr = tagged Add '{5'd1, 5'd2, 5'd3};
      |               ^~~~~~
%Error: t/t_tagged_union.v:158:15: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  158 |       instr = tagged Add '{reg2:5'd10, regd:5'd20, reg1:5'd5};
      |               ^~~~~~
%Error: t/t_tagged_union.v:164:15: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  164 |       instr = tagged Jmp (tagged JmpU 10'd512);
      |               ^~~~~~
%Error: t/t_tagged_union.v:168:15: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  168 |       instr = tagged Jmp (tagged JmpC '{2'd1, 10'd256});
      |               ^~~~~~
%Error: t/t_tagged_union.v:173:15: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  173 |       instr = tagged Jmp (tagged JmpC '{cc:2'd3, addr:10'd100});
      |               ^~~~~~
%Error: Exiting due to
